--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,35 +2,37 @@ name: Update Telegram IP Routes (IPv4 & IPv6)
 
 on:
   schedule:
-    - cron: '0 1 * * *' 
-  workflow_dispatch:
+    - cron: '0 1 * * *'  # 每天 UTC 时间 1:00 运行
+  workflow_dispatch:      # 允许手动触发
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0  # 获取完整历史记录
 
-      - name: Generate Route Script
-        run: |
-          chmod +x ./generate-telegram-routes.sh
-          ./generate-telegram-routes.sh
+    - name: Generate Route Script
+      run: |
+        chmod +x ./generate-telegram-routes.sh
+        ./generate-telegram-routes.sh
 
-      - name: Commit and Push Updated RSC Files
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          # 添加两个 .rsc 文件
+    - name: Commit and Push Updated RSC Files
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        
+        # 检查文件是否有实际变化
+        if git status --porcelain | grep -E 'routeros-telegram-(routes|addresslist)\.rsc'; then
           git add routeros-telegram-routes.rsc routeros-telegram-addresslist.rsc
-
-          # 如果有改动就提交，否则跳过
-          if ! git diff --cached --quiet; then
-            git commit -m "🤖 自动更新 Telegram IP 路由和地址列表 [CI]"
-            git push
-          else
-            echo "No changes in RSC files. Skipping commit."
-          fi
+          git commit -m "🤖 自动更新 Telegram IP 路由和地址列表 [skip ci]"
+          git push
+          echo "Changes detected and pushed successfully."
+        else
+          echo "No changes in RSC files. Skipping commit."
+        fi
 
