--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,8 +5,8 @@ permissions:
 
 on:
   schedule:
-    - cron: '0 1 * * *'    # 每日常规更新
-    - cron: '0 1 7 * *'    # 每月强制更新
+    - cron: '0 0 2-31 * *'    # 每日常规更新
+    - cron: '0 0 1 * *'    # 每月强制更新
   workflow_dispatch:       # 手动触发
 
 jobs:
